salesforce/force-app/main/default/objects/Field_Trust_Contract__mdt/Field_Trust_Contract__mdt.object-meta.xml
<CustomObject>
    <description>One row per field an agent touches: who is authoritative, how fresh it must be, who may write it, and its tier.</description>
    <label>Field Trust Contract</label>
    <pluralLabel>Field Trust Contracts</pluralLabel>
</CustomObject>