salesforce/force-app/main/default/objects/Field_Trust_Contract__mdt/fields/Allowed_Writers__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Writers__c</fullName>
    <description>Writer labels allowed to write this field, separated by commas</description>
    <label>Allowed Writers</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>