salesforce/force-app/main/default/objects/Field_Trust_Contract__mdt/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <description>The system allowed to be the source of this value</description>
    <label>Authority</label>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>