salesforce/force-app/main/default/objects/Field_Trust_Contract__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Object and field API name, for example Account.ARR__c</description>
    <label>Field</label>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
</CustomField>