salesforce/force-app/main/default/objects/Field_Trust_Contract__mdt/fields/Freshness_SLA_Hours__c.field-meta.xml
<CustomField>
    <fullName>Freshness_SLA_Hours__c</fullName>
    <description>How old the value may be before it should not drive an action</description>
    <label>Freshness SLA (hours)</label>
    <required>true</required>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>