salesforce/force-app/main/default/objects/Field_Trust_Contract__mdt/fields/Match_Key_Field__c.field-meta.xml
<CustomField>
    <fullName>Match_Key_Field__c</fullName>
    <description>Optional: field whose value identifies the real-world entity, used to count duplicates</description>
    <label>Match Key Field</label>
    <type>Text</type>
    <length>80</length>
</CustomField>