salesforce/force-app/main/default/objects/Field_Trust_Contract__mdt/fields/Sync_Field__c.field-meta.xml
<CustomField>
    <fullName>Sync_Field__c</fullName>
    <description>Optional: field on the same object that the integration sets on every sync run</description>
    <label>Sync Timestamp Field</label>
    <type>Text</type>
    <length>80</length>
</CustomField>