salesforce/force-app/main/default/objects/Field_Trust_Contract__mdt/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <description>context: read only; advisory: may inform a draft; action: may drive an autonomous write</description>
    <label>Tier</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>context</fullName>
            </value>
            <value>
                <fullName>advisory</fullName>
            </value>
            <value>
                <fullName>action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>